Add DELETE feature

--- a/client/src/app/courses/courses.component.html
+++ b/client/src/app/courses/courses.component.html
@@ -198,7 +198,8 @@
                 <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" (click)="this.addCourse()" *ngIf="this.intention == 'add'">Add!</button>
                 <div class="row" *ngIf="this.intention == 'edit'">
                     <div class="col">
-                        <button type="button" class="btn btn-warning w-100">Delete!</button>
+                        <button type="button" class="btn btn-warning w-100" *ngIf="!this.clickedDelete" (click)="this.clickedDelete = true">Delete!</button>
+                        <button type="button" class="btn btn-danger w-100" data-bs-dismiss="modal" *ngIf="this.clickedDelete" (click)="this.delete()">Confirm Delete!</button>
                     </div>
                     <div class="col">
                         <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" (click)="this.updateCourse()">Update!</button>
