--- a/client/src/app/subjects/subjects.component.html
+++ b/client/src/app/subjects/subjects.component.html
@@ -2,13 +2,13 @@
     <ul class="list-group shadow">
         <li class="list-group-item p-4">
             <div class="row align-items-center">
-                <div class="col text-start">
+                <div class="col-md text-start">
                     <h5 class="mb-0">
                         Subjects
                         <span class="spinner-border spinner-border-sm" *ngIf="this.loading"></span>
                     </h5>
                 </div>
-                <div class="col text-end">
+                <div class="col-md text-end">
                     <button class="btn btn-primary mx-2" *ngIf="!this.loading" (click)="this.fetchSubjects()">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/><path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/></svg>
                     </button>
@@ -25,9 +25,6 @@
         <li class="list-group-item p-4">
             <div class="alert alert-danger text-center small" role="alert" *ngIf="this.errorMsg != ''">
                 {{ this.errorMsg }}
-            </div>
-            <div class="text-center" *ngIf="false">
-                <span class="spinner-border"></span>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item" *ngFor="let subject of this.subjects">
