--- a/client/src/app/busy-timeblocks/busy-timeblocks.component.html
+++ b/client/src/app/busy-timeblocks/busy-timeblocks.component.html
@@ -16,7 +16,7 @@
                     <button class="btn btn-primary mx-2" disabled *ngIf="this.loading">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/><path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/></svg>
                     </button>
-                    <button class="btn btn-primary" *ngIf="!this.loading">Add Busy Timeblock!</button>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal" *ngIf="!this.loading" (click)="this.aboutToAdd()">Add Busy Timeblock!</button>
                     <button class="btn btn-primary" disabled *ngIf="this.loading">Add Busy Timeblock!</button>
                 </div>
             </div>
@@ -43,41 +43,42 @@
 </div>
 
 <!-- Add modal / Edit modal -->
-<!-- <div class="modal fade" id="modal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="modal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" *ngIf="this.intention == 'add'">Adding Subject</h5>
-                <h5 class="modal-title" *ngIf="this.intention == 'edit'">Editing Subject</h5>
+                <h5 class="modal-title" *ngIf="this.intention == 'add'">Adding Busy Block</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="mb-3">
                     <label class="form-label text-danger">id (only for testing)</label>
-                    <input type="text" class="form-control" *ngIf="this.intention == 'add'" [(ngModel)]="this.subjectToBeAdded.id">
-                    <input type="text" class="form-control" *ngIf="this.intention == 'edit'" [(ngModel)]="this.subjectToBeEdited.id">
+                    <input type="text" class="form-control" *ngIf="this.intention == 'add'" [(ngModel)]="this.busyTimeblockToBeAdded.id">
                 </div>
                 <div class="mb-3">
-                    <label class="form-label">Title</label>
-                    <input type="text" class="form-control" *ngIf="this.intention == 'add'" [(ngModel)]="this.subjectToBeAdded.title">
-                    <input type="text" class="form-control" *ngIf="this.intention == 'edit'" [(ngModel)]="this.subjectToBeEdited.title">
+                    <label class="form-label">Day</label>
+                    <select class="form-select" *ngIf="this.intention == 'add'" [(ngModel)]="this.busyTimeblockToBeAdded.day">
+                        <option value="Monday">Monday</option>
+                        <option value="Tuesday">Tuesday</option>
+                        <option value="Wednesday">Wednesday</option>
+                        <option value="Thursday">Thursday</option>
+                        <option value="Friday">Friday</option>
+                        <option value="Saturday">Saturday</option>
+                        <option value="Sunday">Sunday</option>
+                    </select>
                 </div>
-                <div class="mb-5">
-                    <label class="form-label">Credits</label>
-                    <input type="number" class="form-control" *ngIf="this.intention == 'add'" [(ngModel)]="this.subjectToBeAdded.credits">
-                    <input type="number" class="form-control" *ngIf="this.intention == 'edit'" [(ngModel)]="this.subjectToBeEdited.credits">
-                </div>
-                <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" *ngIf="this.intention == 'add'" (click)="this.addSubject()">Add!</button>
-                <div class="row" *ngIf="this.intention == 'edit'">
-                    <div class="col text-start">
-                        <button type="button" class="btn btn-warning w-100" *ngIf="!this.clickedDelete" (click)="this.clickedDelete = true">Delete!</button>
-                        <button type="button" class="btn btn-danger w-100" data-bs-dismiss="modal" *ngIf="this.clickedDelete" (click)="this.delete()">Confirm Delete!</button>
+                <div class="row mb-5">
+                    <div class="col">
+                        <label class="form-label">Start</label>
+                        <input type="time" class="form-control" *ngIf="this.intention == 'add'" [(ngModel)]="this.busyTimeblockToBeAdded.start">
                     </div>
-                    <div class="col text-end">
-                        <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" (click)="this.updateSubject()">Update!</button>
+                    <div class="col">
+                        <label class="form-label">End</label>
+                        <input type="time" class="form-control" *ngIf="this.intention == 'add'" [(ngModel)]="this.busyTimeblockToBeAdded.end">
                     </div>
                 </div>
+                <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" *ngIf="this.intention == 'add'" (click)="this.add()">Add!</button>
             </div>
         </div>
     </div>
-</div> -->
+</div>
