--- a/client/src/app/busy-timeblocks/busy-timeblocks.component.html
+++ b/client/src/app/busy-timeblocks/busy-timeblocks.component.html
@@ -91,8 +91,11 @@
                     </div>
                 </div>
                 <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" *ngIf="this.intention == 'add'" (click)="this.add()">Add!</button>
-                <div class="row">
-                    <div class="col"></div>
+                <div class="row" *ngIf="this.intention == 'edit'">
+                    <div class="col">
+                        <button type="button" class="btn btn-warning w-100" *ngIf="!this.clickedDelete" (click)="this.clickedDelete = true">Delete!</button>
+                        <button type="button" class="btn btn-danger w-100" data-bs-dismiss="modal" *ngIf="this.clickedDelete" (click)="this.delete()">Confirm Delete!</button>
+                    </div>
                     <div class="col">
                         <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" *ngIf="this.intention == 'edit'" (click)="this.update()">Update!</button>
                     </div>
