--- a/client/src/app/busy-timeblocks/busy-timeblocks.component.html
+++ b/client/src/app/busy-timeblocks/busy-timeblocks.component.html
@@ -29,7 +29,7 @@
                 <span class="spinner-border"></span>
             </div> -->
             <ul class="list-group list-group-flush">
-                <li class="list-group-item" *ngFor="let btb of this.busyTimeBlocks">
+                <li class="list-group-item" *ngFor="let btb of this.busyTimeblocks">
                     <div class="row">
                         <div class="col-md text-start">{{ btb.day }} {{ btb.start }}-{{ btb.end }}</div>
                         <div class="col-md text-end">
