--- a/client/src/app/courses/courses.component.html
+++ b/client/src/app/courses/courses.component.html
@@ -60,8 +60,8 @@
                         <tr *ngFor="let course of this.subject.courses">
                             <td>{{ course.code }}</td>
                             <td>{{ course.slots }}</td>
-                            <td>{{ course.getCourseVM().day }}</td>
-                            <td>{{ course.getCourseVM().start }}-{{ course.getCourseVM().end }}</td>
+                            <td>{{ course.day }}</td>
+                            <td>{{ course.start }}-{{ course.end }}</td>
                             <td>{{ course.teachers }}</td>
                             <td>
                                 <svg *ngIf="course.fix" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16"><path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" /></svg>
