--- a/client/src/app/subjects/subjects.component.html
+++ b/client/src/app/subjects/subjects.component.html
@@ -9,7 +9,7 @@
                     </h5>
                 </div>
                 <div class="col-md text-end">
-                    <button class="btn btn-primary mx-2" *ngIf="!this.loading" (click)="this.fetchSubjects()">
+                    <button class="btn btn-primary mx-2" *ngIf="!this.loading" (click)="this.fetch()">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/><path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/></svg>
                     </button>
                     <button class="btn btn-primary mx-2" disabled *ngIf="this.loading">
@@ -27,7 +27,7 @@
                 {{ this.errorMsg }}
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item" *ngFor="let subject of this.subjects">
+                <li class="list-group-item" *ngFor="let subject of this.models">
                     <div class="row">
                         <div class="col-md text-start">{{ subject.title }} [{{ subject.credits }}]</div>
                         <div class="col-md text-end">
@@ -52,27 +52,24 @@
             <div class="modal-body">
                 <div class="mb-3">
                     <label class="form-label text-danger">id (only for testing)</label>
-                    <input type="text" class="form-control" *ngIf="this.intention == 'add'" [(ngModel)]="this.subjectToBeAdded.id">
-                    <input type="text" class="form-control" *ngIf="this.intention == 'edit'" [(ngModel)]="this.subjectToBeEdited.id">
+                    <input type="text" class="form-control" [(ngModel)]="this.tempModel.id">
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Title</label>
-                    <input type="text" class="form-control" *ngIf="this.intention == 'add'" [(ngModel)]="this.subjectToBeAdded.title">
-                    <input type="text" class="form-control" *ngIf="this.intention == 'edit'" [(ngModel)]="this.subjectToBeEdited.title">
+                    <input type="text" class="form-control" [(ngModel)]="this.tempModel.title">
                 </div>
                 <div class="mb-5">
                     <label class="form-label">Credits</label>
-                    <input type="number" class="form-control" *ngIf="this.intention == 'add'" [(ngModel)]="this.subjectToBeAdded.credits">
-                    <input type="number" class="form-control" *ngIf="this.intention == 'edit'" [(ngModel)]="this.subjectToBeEdited.credits">
+                    <input type="number" class="form-control" [(ngModel)]="this.tempModel.credits">
                 </div>
-                <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" *ngIf="this.intention == 'add'" (click)="this.addSubject()">Add!</button>
+                <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" *ngIf="this.intention == 'add'" (click)="this.add(this.tempModel.toDto())">Add!</button>
                 <div class="row" *ngIf="this.intention == 'edit'">
                     <div class="col text-start">
                         <button type="button" class="btn btn-warning w-100" *ngIf="!this.clickedDelete" (click)="this.clickedDelete = true">Delete!</button>
-                        <button type="button" class="btn btn-danger w-100" data-bs-dismiss="modal" *ngIf="this.clickedDelete" (click)="this.delete()">Confirm Delete!</button>
+                        <button type="button" class="btn btn-danger w-100" data-bs-dismiss="modal" *ngIf="this.clickedDelete" (click)="this.delete(this.tempModel.toDto())">Confirm Delete!</button>
                     </div>
                     <div class="col text-end">
-                        <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" (click)="this.updateSubject()">Update!</button>
+                        <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" (click)="this.update(this.tempModel.toDto())">Update!</button>
                     </div>
                 </div>
             </div>
