--- a/client/src/app/busy-timeblocks/busy-timeblocks.component.html
+++ b/client/src/app/busy-timeblocks/busy-timeblocks.component.html
@@ -85,7 +85,7 @@
                         <button type="button" class="btn btn-danger w-100" data-bs-dismiss="modal" *ngIf="this.clickedDelete" (click)="this.delete(this.tempModel.id)">Confirm Delete!</button>
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" *ngIf="this.intention == 'edit'" (click)="this.update(this.tempModel.toDto())">Update!</button>
+                        <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" *ngIf="this.intention == 'edit'" (click)="this.update(this.tempModel.id, this.tempModel.toDto())">Update!</button>
                     </div>
                 </div>
             </div>
