--- a/client/src/app/daily-active-times/daily-active-times.component.html
+++ b/client/src/app/daily-active-times/daily-active-times.component.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="col">
                         <label class="form-label">Max</label>
-                        <input type="max" class="form-control" [(ngModel)]="this.tempModel.max">
+                        <input type="number" class="form-control" [(ngModel)]="this.tempModel.max">
                     </div>
                 </div>
                 <button type="button" class="btn btn-primary w-100" data-bs-dismiss="modal" *ngIf="this.intention == 'edit'" (click)="this.update(this.tempModel.id, this.tempModel.toDto())">Update!</button>
