--- a/client/src/app/generating/generating.component.html
+++ b/client/src/app/generating/generating.component.html
@@ -15,8 +15,8 @@
                     <button class="btn btn-primary mx-2" disabled *ngIf="this.loading">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/><path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/></svg>
                     </button>
-                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal" *ngIf="!this.loading" (click)="this.generate()">Generate Schedules!</button>
-                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal" disabled *ngIf="this.loading">
+                    <button class="btn btn-primary" *ngIf="!this.loading" (click)="this.generate()">Generate Schedules!</button>
+                    <button class="btn btn-primary" disabled *ngIf="this.loading">
                         <span class="spinner-border spinner-border-sm" *ngIf="this.isGenerating"></span>
                         Generate Schedules!
                     </button>
@@ -44,7 +44,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let course of this.models">
+                            <tr *ngFor="let course of this.pageContent">
                                 <td>{{ course.code }}</td>
                                 <td>{{ course.slots }}</td>
                                 <td>{{ course.day }}</td>
