Add saturday support

--- a/client/src/app/courses/courses.component.html
+++ b/client/src/app/courses/courses.component.html
@@ -38,7 +38,7 @@
                 {{ this.errorMsg }}
             </div>
             <div class="alert alert-warning text-center small" role="alert" *ngIf="this.notAllAdded">
-                Note: courses without time data have not been imported.
+                Note: courses without time data have not been imported
             </div>
             <div class="text-center" *ngIf="false">
                 <span class="spinner-border"></span>
