Add feature: import multiple subjects at once

--- a/client/src/app/courses/courses.component.html
+++ b/client/src/app/courses/courses.component.html
@@ -37,8 +37,8 @@
             <div class="alert alert-danger text-center small" role="alert" *ngIf="this.errorMsg != ''">
                 {{ this.errorMsg }}
             </div>
-            <div class="alert alert-warning text-center small" role="alert" *ngIf="this.notAllAdded">
-                Note: courses without time data have not been imported
+            <div class="alert alert-warning text-center small" role="alert" *ngIf="this.importWarning">
+                Note: courses without time data are not imported automatically
             </div>
             <div class="text-center" *ngIf="false">
                 <span class="spinner-border"></span>
