--- a/client/src/app/components/busy-timeblocks/busy-timeblocks.component.html
+++ b/client/src/app/components/busy-timeblocks/busy-timeblocks.component.html
@@ -31,7 +31,7 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item" *ngFor="let btb of this.models">
                     <div class="row">
-                        <div class="col-md text-start">{{ btb.day }} {{ btb.start }}-{{ btb.end }}</div>
+                        <div class="col-md text-start">{{ btb.title }} <i class="text-secondary">at {{ btb.day }} {{ btb.start }}-{{ btb.end }}</i></div>
                         <div class="col-md text-end">
                             <a class="btn btn-link p-0" data-bs-toggle="modal" data-bs-target="#modal" (click)="this.aboutToEdit(btb.copy())">Edit</a>
                         </div>
@@ -52,6 +52,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
+                <div class="mb-3">
+                    <label class="form-label">Title</label>
+                    <input type="text" class="form-control" [(ngModel)]="this.tempModel.title">
+                </div>
                 <div class="mb-3">
                     <label class="form-label">Day</label>
                     <select class="form-select" [(ngModel)]="this.tempModel.day">
